import {runCases} from "./test-case-runner";

runCases("PrefixUnaryExpression", "prefix-unary-expression");
